--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:background="#F8F9FA">
-
+    android:background="#E1EEBC">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -16,13 +15,12 @@
         android:layout_marginBottom="32dp"
         android:text="المجموع الكلي"
         android:textAlignment="center"
-        android:textColor="#EB840D"
+        android:textColor="#6BDBB3"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/textView2"
@@ -32,7 +30,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="5000"
-        android:textColor="#4A5568"
+        android:textColor="#67AE6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +44,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="2000"
-        android:textColor="#4A5568"
+        android:textColor="#67AE6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
@@ -59,13 +57,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/edittext_background_new"
         android:ems="10"
         android:gravity="center"
         android:hint="أدخل الرقم"
         android:inputType="number"
         android:padding="12dp"
-        android:textColor="#2D3748"
+        android:textColor="#328E6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,18 +76,17 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/edittext_background_new"
         android:ems="10"
         android:gravity="center"
         android:hint="أدخل الرقم"
         android:inputType="number"
         android:padding="12dp"
-        android:textColor="#2D3748"
+        android:textColor="#328E6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
 
     <TextView
         android:id="@+id/textView5"
@@ -99,7 +96,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="1000"
-        android:textColor="#4A5568"
+        android:textColor="#67AE6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +110,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:text="500"
-        android:textColor="#4A5568"
+        android:textColor="#67AE6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
@@ -126,13 +123,13 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/edittext_background_new"
         android:ems="10"
         android:gravity="center"
         android:hint="أدخل الرقم"
         android:inputType="number"
         android:padding="12dp"
-        android:textColor="#2D3748"
+        android:textColor="#328E6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,13 +142,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/edittext_background_new"
         android:ems="10"
         android:gravity="center"
         android:hint="أدخل الرقم"
         android:inputType="number"
         android:padding="12dp"
-        android:textColor="#2D3748"
+        android:textColor="#328E6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
@@ -163,7 +160,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="للمعهد"
-        android:textColor="#4299E1"
+        android:textColor="#1C87EB"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/editTextNumber3"
@@ -176,13 +173,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="للاستاذ"
-        android:textColor="#48BB78"
+        android:textColor="#0FF213"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/editTextNumber4"
         app:layout_constraintStart_toStartOf="@+id/editTextNumber4"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />
-
 
     <EditText
         android:id="@+id/editTextNumber5"
@@ -191,18 +187,17 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/edittext_background_new"
         android:ems="10"
         android:gravity="center"
         android:hint="النسبة المئوية %"
         android:inputType="number"
         android:padding="12dp"
-        android:textColor="#2D3748"
+        android:textColor="#328E6E"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
 
     <Button
         android:id="@+id/cala_bt"
@@ -211,7 +206,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/button_background"
+        android:background="@drawable/button_background_calculate"
         android:text="حساب المجموع"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -227,7 +222,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_background_secondary"
+        android:background="@drawable/button_background_save"
         android:text="حفظ"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -236,6 +231,85 @@
         app:layout_constraintStart_toStartOf="@+id/guidelineVertical2"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber5" />
 
+    <TextView
+        android:id="@+id/studentsLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="8dp"
+        android:text="عدد الطلاب"
+        android:textColor="#67AE6E"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cala_bt" />
+
+    <TextView
+        android:id="@+id/amountPerStudentLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
+        android:text="المبلغ لكل طالب"
+        android:textColor="#67AE6E"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintTop_toBottomOf="@+id/save_bt" />
+
+    <TextView
+        android:id="@+id/studentsCount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="0"
+        android:textColor="#328E6E"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="@drawable/edittext_background_new"
+        android:padding="12dp"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/studentsLabel" />
+
+    <EditText
+        android:id="@+id/amountPerStudent"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background_new"
+        android:gravity="center"
+        android:hint="أدخل المبلغ"
+        android:inputType="number"
+        android:padding="12dp"
+        android:textColor="#328E6E"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+        app:layout_constraintTop_toBottomOf="@+id/amountPerStudentLabel" />
+
+    <Button
+        android:id="@+id/reset_bt"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/button_background_reset"
+        android:text="تصفير القيم"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/amountPerStudent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineVertical"
