--- a/app/src/main/res/layout/test_constraint.xml
+++ b/app/src/main/res/layout/test_constraint.xml
@@ -29,6 +29,7 @@
 
     <Button
         android:id="@+id/showButton"
+        android:background="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="عرض الرقم"
